WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232741
record<DOMString, GPUSize64> in a dictionary doesn't seem to be supported by IDL
https://bugs.webkit.org/show_bug.cgi?id=232741
Summary
record<DOMString, GPUSize64> in a dictionary doesn't seem to be supported by IDL
Myles C. Maxfield
Reported
2021-11-04 19:20:14 PDT
See dictionary GPUDeviceDescriptor.
Attachments
Patch
(7.39 KB, patch)
2022-03-01 20:16 PST
,
Dan Glastonbury
no flags
Details
Formatted Diff
Diff
Patch
(7.49 KB, patch)
2022-03-01 20:21 PST
,
Dan Glastonbury
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-11-11 18:21:19 PST
<
rdar://problem/85325316
>
Dan Glastonbury
Comment 2
2022-03-01 20:16:41 PST
Created
attachment 453566
[details]
Patch
Dan Glastonbury
Comment 3
2022-03-01 20:21:45 PST
Created
attachment 453567
[details]
Patch
Myles C. Maxfield
Comment 4
2022-03-02 08:13:23 PST
Comment on
attachment 453567
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=453567&action=review
> Source/WebCore/ChangeLog:10 > + GPUDeviceDescriptor.
I don’t see any bindings code here. Did this always work?
Sam Weinig
Comment 5
2022-03-02 10:02:38 PST
(In reply to Myles C. Maxfield from
comment #4
)
> Comment on
attachment 453567
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=453567&action=review
> > > Source/WebCore/ChangeLog:10 > > + GPUDeviceDescriptor. > > I don’t see any bindings code here. Did this always work?
Myles, I think you didn't add the necessary typedef to the IDL file when you tried, so that was likely why it didn't work for you.
Myles C. Maxfield
Comment 6
2022-03-02 16:02:09 PST
Comment on
attachment 453567
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=453567&action=review
>>> Source/WebCore/ChangeLog:10 >>> + GPUDeviceDescriptor. >> >> I don’t see any bindings code here. Did this always work? > > Myles, I think you didn't add the necessary typedef to the IDL file when you tried, so that was likely why it didn't work for you.
🥲
EWS
Comment 7
2022-03-02 16:30:29 PST
Committed
r290761
(
248005@main
): <
https://commits.webkit.org/248005@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453567
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug