[WebGPU] Implement GPUDeviceDescriptor.requiredLimits https://bugs.webkit.org/show_bug.cgi?id=232741 Source/WebCore:

<rdar://problem/85325316>

Patch by Dan Glastonbury <djg@apple.com> on 2022-03-02
Reviewed by Myles C. Maxfield.

Implement IDL bindings for requiredLimits attribute of
GPUDeviceDescriptor.

* Modules/WebGPU/GPUDeviceDescriptor.h:
(WebCore::GPUDeviceDescriptor::convertToBacking const):
* Modules/WebGPU/GPUDeviceDescriptor.idl:

Source/WebCore/PAL:

<rdar://problem/85325316>

Patch by Dan Glastonbury <djg@apple.com> on 2022-03-02
Reviewed by Myles C. Maxfield.

Implement IDL bindings for requiredLimits attribute of
GPUDeviceDescriptor.

* pal/graphics/WebGPU/WebGPUDeviceDescriptor.h:

Source/WebKit:

rdar://problem/85325316

Patch by Dan Glastonbury <djg@apple.com> on 2022-03-02
Reviewed by Myles C. Maxfield.

Implement IDL bindings for requiredLimits attribute of
GPUDeviceDescriptor.

* Shared/WebGPU/WebGPUDeviceDescriptor.cpp:
(WebKit::WebGPU::ConvertToBackingContext::convertToBacking):
(WebKit::WebGPU::ConvertFromBackingContext::convertFromBacking):
* Shared/WebGPU/WebGPUDeviceDescriptor.h:
(WebKit::WebGPU::DeviceDescriptor::encode const):
(WebKit::WebGPU::DeviceDescriptor::decode):


Canonical link: https://commits.webkit.org/248005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290761 268f45cc-cd09-0410-ab3c-d52691b4dbfc