Source/WebKit/Shared/WebGPU/WebGPUDeviceDescriptor.h
@@ -39,12 +39,13 @@ namespace WebKit::WebGPU {
 
 struct DeviceDescriptor : public ObjectDescriptorBase {
     Vector<PAL::WebGPU::FeatureName> requiredFeatures;
-    // FIXME: Add support for requiredLimits.
+    Vector<KeyValuePair<String, uint64_t>> requiredLimits;
 
     template<class Encoder> void encode(Encoder& encoder) const
     {
         encoder << static_cast<const ObjectDescriptorBase&>(*this);
         encoder << requiredFeatures;
+        encoder << requiredLimits;
     }
 
     template<class Decoder> static std::optional<DeviceDescriptor> decode(Decoder& decoder)
@@ -59,7 +60,12 @@ struct DeviceDescriptor : public ObjectDescriptorBase {
         if (!requiredFeatures)
             return std::nullopt;
 
-        return { { WTFMove(*objectDescriptorBase), WTFMove(*requiredFeatures) } };
+        std::optional<Vector<KeyValuePair<String, uint64_t>>> requiredLimits;
+        decoder >> requiredLimits;
+        if (!requiredLimits)
+            return std::nullopt;
+
+        return { { WTFMove(*objectDescriptorBase), WTFMove(*requiredFeatures), WTFMove(*requiredLimits) } };
     }
 };
 
